<resources>
    <string name="app_name">Silencer</string>
    <string name="action_settings">Settings</string>

    <string name="msg">permission</string>
    <string name="hello_world">Hello, World!</string>
    <string name="floating_action_button">Floating Action Button</string>

    <!-- Preference Headers -->
    <string name="night_mode_header">Display</string>
    <string name="audio_header">Audio</string>

    <!-- Preference Titles -->
    <string name="night_mode_title">Night/Dark Mode</string>
    <string name="notifications_title">Allow Notifications</string>
    <string name="vibrate_title">Allow this app to turn phone on vibrate</string>
    <string name="silent_title">Allow this app to turn phone on silent</string>

    <!-- keys -->
    <string name="night_mode_key">Night Mode</string>
    <string name="notifications_key">Notifications</string>

    <!-- Preference Summaries -->
    <string name="night_mode_off">Never use Night/Dark Mode</string>
    <string name="night_mode_on">Use Night/Dark Mode (unless disabled in OS Settings)</string>

    <string name="notifications_on">Notify me when my phone goes on silent/vibrate</string>
    <string name="notifications_off">Never notify me on volume changes</string>

    <string name="silent_summary_off">This app will not be able to turn this phone on silent when needed</string>
    <string name="silent_summary_on">Allow this app to turn this phone on silent when needed</string>

    <string name="vibrate_summary_off">This app will not be able to turn this phone on vibrate when needed</string>
    <string name="vibrate_summary_on">Allow this app to turn this phone on vibrate when needed</string>

    <!-- Menu items -->
    <string name="menu_about">About</string>
    <string name="action_saved_addresses">Saved Addresses</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="background_image">Background Image</string>
    <string name="enter_the_address_below">Enter the address below</string>
</resources>