<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/night_mode_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/night_mode_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/night_mode_key"
            app:summaryOff="@string/night_mode_off"
            app:summaryOn="@string/night_mode_on"
            app:title="@string/night_mode_title"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications_header">

        <SwitchPreferenceCompat
            app:title="@string/notifications_title"
            app:defaultValue="true"
            app:key="@string/notifications_key"
            app:summaryOff="@string/notifications_off"
            app:summaryOn="@string/notifications_on"/>

    </PreferenceCategory>

</PreferenceScreen>